# comma_video_compression_challenge

./: .gitignore  README.md  evaluate.py  frame_utils.py  modules.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/workflows/: eval.yml
submissions/roi_gop300_c34/: compress.sh  inflate.py  inflate.sh  roi_preprocess.py
